--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "progder.front",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
     "node-sass": "^6.0.0",
+    "pnpm": "^6.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
-    "sass": "^1.26.5"
+    "sass": "^1.26.5",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
